assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 137 conflicts: 9 shift/reduce
State 150 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error
    7      | CLASS error ';'

    8 feature_list: %empty
    9             | feature_list feature ';'

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expression
   14        | error

   15 formal_list: formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 _disexpressions: %empty
   19                | _disexpressions ',' expression

   20 disexpressions: %empty
   21               | expression _disexpressions

   22 blkexpressions: expression ';'
   23               | blkexpressions expression ';'
   24               | error ';'
   25               | blkexpressions error ';'

   26 expression: OBJECTID ASSIGN expression
   27           | expression '.' OBJECTID '(' disexpressions ')'
   28           | expression '@' TYPEID '.' OBJECTID '(' disexpressions ')'
   29           | OBJECTID '(' disexpressions ')'
   30           | IF expression THEN expression ELSE expression FI
   31           | WHILE expression LOOP expression POOL
   32           | '{' blkexpressions '}'
   33           | LET lets
   34           | CASE expression OF cases ESAC
   35           | NEW TYPEID
   36           | ISVOID expression
   37           | expression '+' expression
   38           | expression '-' expression
   39           | expression '*' expression
   40           | expression '/' expression
   41           | '~' expression
   42           | expression '<' expression
   43           | expression '=' expression
   44           | expression LE expression
   45           | NOT expression
   46           | '(' expression ')'
   47           | OBJECTID
   48           | INT_CONST
   49           | STR_CONST
   50           | BOOL_CONST

   51 lets: OBJECTID ':' TYPEID IN expression
   52     | OBJECTID ':' TYPEID ASSIGN expression IN expression
   53     | OBJECTID ':' TYPEID ',' lets
   54     | OBJECTID ':' TYPEID ASSIGN expression ',' lets
   55     | error ',' lets
   56     | OBJECTID ':' TYPEID IN error
   57     | OBJECTID ':' TYPEID ASSIGN expression IN error

   58 cases: acase
   59      | cases acase

   60 acase: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 11 27 28 29 46
    ')' (41) 10 11 27 28 29 46
    '*' (42) 39
    '+' (43) 37
    ',' (44) 16 19 53 54 55
    '-' (45) 38
    '.' (46) 27 28
    '/' (47) 40
    ':' (58) 10 11 12 13 17 51 52 53 54 56 57 60
    ';' (59) 4 5 7 9 22 23 24 25 60
    '<' (60) 42
    '=' (61) 43
    '@' (64) 28
    '{' (123) 4 5 10 11 32
    '}' (125) 4 5 10 11 32
    '~' (126) 41
    error (256) 6 7 14 24 25 55 56 57
    CLASS (258) 4 5 7
    ELSE (259) 30
    FI (260) 30
    IF (261) 30
    IN (262) 51 52 56 57
    INHERITS (263) 5
    LET (264) 33
    LOOP (265) 31
    POOL (266) 31
    THEN (267) 30
    WHILE (268) 31
    CASE (269) 34
    ESAC (270) 34
    OF (271) 34
    DARROW (272) 60
    NEW (273) 35
    ISVOID (274) 36
    STR_CONST <symbol> (275) 49
    INT_CONST <symbol> (276) 48
    BOOL_CONST <boolean> (277) 50
    TYPEID <symbol> (278) 4 5 10 11 12 13 17 28 35 51 52 53 54 56 57 60
    OBJECTID <symbol> (279) 10 11 12 13 17 26 27 28 29 47 51 52 53 54 56 57 60
    ASSIGN (280) 13 26 52 54 57
    NOT (281) 45
    LE (282) 44
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6 7
        on right: 2 3
    feature_list <features> (49)
        on left: 8 9
        on right: 4 5 9
    feature <feature> (50)
        on left: 10 11 12 13 14
        on right: 9
    formal_list <formals> (51)
        on left: 15 16
        on right: 11 16
    formal <formal> (52)
        on left: 17
        on right: 15 16
    _disexpressions <expressions> (53)
        on left: 18 19
        on right: 19 21
    disexpressions <expressions> (54)
        on left: 20 21
        on right: 27 28 29
    blkexpressions <expressions> (55)
        on left: 22 23 24 25
        on right: 23 25 32
    expression <expression> (56)
        on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 10 11 13 19 21 22 23 26 27 28 30 31 34 36 37 38 39 40 41 42 43 44 45 46 51 52 54 57 60
    lets <expression> (57)
        on left: 51 52 53 54 55 56 57
        on right: 33 53 54 55
    cases <cases> (58)
        on left: 58 59
        on right: 34 59
    acase <case_> (59)
        on left: 60
        on right: 58 59


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error .

    $default  reduce using rule 6 (class)


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS . error ';'

    error   shift, and go to state 6
    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    7 class: CLASS error . ';'

    ';'  shift, and go to state 10


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    7 class: CLASS error ';' .

    $default  reduce using rule 7 (class)


State 11

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 12

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 14


State 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 20


State 16

   14 feature: error .

    $default  reduce using rule 14 (feature)


State 17

   10 feature: OBJECTID . '(' ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 18

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


State 19

    9 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 24


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 25

    feature  go to state 19


State 21

   10 feature: OBJECTID '(' . ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 26
    ')'       shift, and go to state 27

    formal_list  go to state 28
    formal       go to state 29


State 22

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 30


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    9 feature_list: feature_list feature ';' .

    $default  reduce using rule 9 (feature_list)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


State 26

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 27

   10 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 33


State 28

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 34
    ','  shift, and go to state 35


State 29

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 30

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 36

    $default  reduce using rule 12 (feature)


State 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 32

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


State 33

   10 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 38


State 34

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 39


State 35

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 40


State 36

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 55


State 37

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 38

   10 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 56


State 39

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 57


State 40

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


State 41

   30 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 58


State 42

   33 expression: LET . lets

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    lets  go to state 61


State 43

   31 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 62


State 44

   34 expression: CASE . expression OF cases ESAC

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 63


State 45

   35 expression: NEW . TYPEID

    TYPEID  shift, and go to state 64


State 46

   36 expression: ISVOID . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 65


State 47

   49 expression: STR_CONST .

    $default  reduce using rule 49 (expression)


State 48

   48 expression: INT_CONST .

    $default  reduce using rule 48 (expression)


State 49

   50 expression: BOOL_CONST .

    $default  reduce using rule 50 (expression)


State 50

   26 expression: OBJECTID . ASSIGN expression
   29           | OBJECTID . '(' disexpressions ')'
   47           | OBJECTID .

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 47 (expression)


State 51

   45 expression: NOT . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 68


State 52

   41 expression: '~' . expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 69


State 53

   32 expression: '{' . blkexpressions '}'

    error       shift, and go to state 70
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    blkexpressions  go to state 71
    expression      go to state 72


State 54

   46 expression: '(' . expression ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 73


State 55

   13 feature: OBJECTID ':' TYPEID ASSIGN expression .
   27 expression: expression . '.' OBJECTID '(' disexpressions ')'
   28           | expression . '@' TYPEID '.' OBJECTID '(' disexpressions ')'
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '=' expression
   44           | expression . LE expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 13 (feature)


State 56

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 83


State 57

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 84


State 58

   27 expression: expression . '.' OBJECTID '(' disexpressions ')'
   28           | expression . '@' TYPEID '.' OBJECTID '(' disexpressions ')'
   30           | IF expression . THEN expression ELSE expression FI
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '=' expression
   44           | expression . LE expression

    THEN  shift, and go to state 85
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 59

   55 lets: error . ',' lets

    ','  shift, and go to state 86


State 60

   51 lets: OBJECTID . ':' TYPEID IN expression
   52     | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   53     | OBJECTID . ':' TYPEID ',' lets
   54     | OBJECTID . ':' TYPEID ASSIGN expression ',' lets
   56     | OBJECTID . ':' TYPEID IN error
   57     | OBJECTID . ':' TYPEID ASSIGN expression IN error

    ':'  shift, and go to state 87


State 61

   33 expression: LET lets .

    $default  reduce using rule 33 (expression)


State 62

   27 expression: expression . '.' OBJECTID '(' disexpressions ')'
   28           | expression . '@' TYPEID '.' OBJECTID '(' disexpressions ')'
   31           | WHILE expression . LOOP expression POOL
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '=' expression
   44           | expression . LE expression

    LOOP  shift, and go to state 88
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 63

   27 expression: expression . '.' OBJECTID '(' disexpressions ')'
   28           | expression . '@' TYPEID '.' OBJECTID '(' disexpressions ')'
   34           | CASE expression . OF cases ESAC
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '=' expression
   44           | expression . LE expression

    OF   shift, and go to state 89
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


State 64

   35 expression: NEW TYPEID .

    $default  reduce using rule 35 (expression)


State 65

   27 expression: expression . '.' OBJECTID '(' disexpressions ')'
   28           | expression . '@' TYPEID '.' OBJECTID '(' disexpressions ')'
   36           | ISVOID expression .
   37           | expression . '+' expression
   38           | expression . '-' expression
   39           | expression . '*' expression
   40           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '=' expression
   44           | expression . LE expression

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
